added mobile view

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 	<script type="text/javascript" src="drumkit-script.js"></script>
 </head>
 <body>
+	<div id="mobile-view">
+		<h1>Note: View this website in laptop/pc</h1>
+		<h2>This website works only when keyboard is connected with the device</h2>
+	</div>
 	<div class="keys">
 	    <div data-key="65" class="key">
 	      <kbd>A</kbd>
