--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Drum Kit</title>
 	<link rel="stylesheet" type="text/css" href="drumkit-style.css">
 	<link rel="shortcut icon" href="#">
 	<script type="text/javascript" src="drumkit-script.js"></script>
